# chlorophyll

./: CMakeLists.txt  \  main.cpp
data/textures/test_texture/: attack.kra  block.kra  character.kra  character.kra~  character.png~  evade.kra  portrait.kra
include/: battle.h  effect.h  unit.h
include/gameplay/: character.h  effect.h  guy.h  skill.h  unit.h
include/render/: guy.h  sprite.h
include/tool/: range.h  timer.h
